# activity_tracker

./: .env.example  .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
activityTracker/: asgi.py  settings.py  urls.py  wsgi.py
main/: forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_post_activity_id.py  0003_rename_author_id_activity_author_and_more.py  0004_remove_activity_post.py  0005_activity_created_at_alter_activity_activity_category_and_more.py  0006_alter_profile_profileimg_alter_profile_user.py  0007_profile_isprivate.py  0008_alter_profile_isprivate.py  0009_activity_activity_duration.py  0010_mycsv_alter_activity_activity_category_and_more.py  0011_alter_mycsv_file_name.py  0012_profile_selectmenu.py  0013_remove_profile_selectmenu.py  0014_profile_selectmenu.py  0015_remove_profile_selectmenu.py  0016_profile_selectmenu.py  0017_remove_profile_selectmenu.py
main/templates/main/: account_settings.html  base.html  change_password.html  contact.html  create_activity.html  create_post.html  home.html  post_page.html  profile.html  search.html  show_report.html  show_report2.html  update_profile.html  upload.html
main/templates/registration/: login.html  register.html
staticfiles/: staticfiles.json
tests/: createCommentsAutomated.py  createPostsAutomated.py  createUsersAutomated.py  test_auth_pages.py  test_forms.py  test_models.py
