[project]
name = "activity-tracker"
version = "0.1.0"
description = "Physical activity tracking web app built with Django"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "Django==5.2.1",
    "cryptography==44.0.3",
    "crispy-bootstrap5==2025.4",
    "django-allauth==65.8.0",
    "django-auto-logout==0.5.1",
    "django-crispy-forms==2.4",
    "django-extensions==4.1",
    "dj-database-url>=2.2.0,<3",
    "gunicorn>=22,<24",
    "humanfriendly==10.0",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "plotly==6.0.1",
    "psycopg2==2.9.10",
    "PyJWT==2.6.0",
    "python-dotenv==1.2.1",
    "selenium==4.7.2",
    "webdriver-manager==3.8.5",
    "whitenoise==6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
